--- a/src/Aprendizado.css
+++ b/src/Aprendizado.css
@@ -64,21 +64,23 @@
 /* Estilo para a seção de livros */
 .livro-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Exibe 3 livros por linha */
+  grid-template-columns: repeat(2, 1fr); /* Exibe 2 livros por linha */
   gap: 40px;
-  padding: 20px;
+  padding: 40px;
+  justify-content: center; /* Centraliza os blocos na página */
 }
 
 .livro-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-  background-color: #3a3131;
-  border-radius: 8px;
+  padding: 30px;
+  background-color: #272323;
+  border-radius: 12px;
   transition: transform 0.3s ease;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave */
-  margin-bottom: 40px; /* Adiciona margem na parte inferior */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); /* Aumenta a sombra para mais destaque */
+  margin-bottom: 40px;
+  max-width: 2100px; /* Define uma largura máxima para os blocos */
 }
 
 .livro-item:hover {
@@ -88,28 +90,28 @@
 .livro-imagem {
   width: 100%;
   height: auto;
-  max-width: 150px;
+  max-width: 250px; /* Aumenta o tamanho máximo da imagem */
   border-radius: 8px;
-  margin-bottom: 30px; /* Espaçamento abaixo da imagem */
+  margin-bottom: 20px;
 }
 
 .livro-descricao {
   text-align: center;
   flex: 1;
+  max-width: 500px; /* Define uma largura máxima para o texto */
 }
 
 .livro-title {
-  font-size: 1.6rem;
-  color: #d4af37; /* Cor dourada para os títulos dos livros */
-  margin-bottom: 10px;
+  font-size: 2rem;
+  color: #d4af37;
+  margin-bottom: 15px;
 }
 
 .livro-descricao p {
   font-size: 1.2rem;
   color: #ffffff;
-  text-align: justify; /* Justifica o texto para melhor legibilidade */
-  max-width: 400px;
-  line-height: 1.5; /* Aumenta o espaçamento entre linhas para melhor leitura */
+  text-align: justify;
+  line-height: 1.6;
 }
 
 /* Estilos para a seção de Cursos */
