--- a/src/Jogar.css
+++ b/src/Jogar.css
@@ -4,7 +4,7 @@
 }
 
 .jogar-title {
-  font-size: 48px; /* Aumenta o tamanho do título */
+  font-size: 48px;
   color: #ffffff;
   font-weight: bold;
   animation: fadeIn 2s ease-in-out;
@@ -12,7 +12,7 @@
 }
 
 .jogar-text {
-  font-size: 24px; /* Aumenta o tamanho do texto */
+  font-size: 24px;
   color: #d3d3d3;
   margin-bottom: 50px;
 }
@@ -22,8 +22,8 @@
 }
 
 .bot-image {
-  width: 900px; /* Aumenta o tamanho da imagem */
-  height: 500px; /* Aumenta o tamanho da imagem */
+  width: 900px;
+  height: 500px;
   border-radius: 10%;
   border: 3px solid #000000;
 }
@@ -35,8 +35,35 @@
 }
 
 .chessboard-wrapper {
-  width: 100%; /* O tabuleiro ocupa a largura total do contêiner */
-  max-width: 600px; /* Define um limite para o tamanho máximo */
+  width: 100%;
+  max-width: 750px;
+  background-color: #000000;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.button-container {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.game-button {
+  padding: 10px 20px;
+  font-size: 20px;
+  background-color: #41c990;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.game-button:hover {
+  background-color: #45a049;
 }
 
 @keyframes fadeIn {
